# HelioBio-Social-1

./: .env  .env.example  .gitignore  CODE_OF_CONDUCT.md  LICENSE  MANIFESTO.md  README.md  docker-compose.yml  pyproject.toml  quickstart.sh
.github/workflows/: ci.yml
app/static/js/: heliobio-system.jsx
backend/: Dockerfile  config.py  database.py  main.py  requirements.txt
backend/alerts/: alert_engine.py
backend/analytics/: correlation_engine.py
backend/api/v1/: mental_health.py  solar.py
backend/connectors/health/: who_gho.py
backend/connectors/solar/: noaa_swpc.py
backend/core/: __init__.py
backend/database/: database.py  models.py
backend/database/models/: __init__.py  mental_health_data.py
backend/engines/: correlation_engine.py  mental_health_engine.py  solar_engine.py
database/: timescale_setup.sql
database/postgres/: init.sql
database/redis/: redis.conf
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.jupyter  nginx.conf
docs/: API_REFERENCE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_SOURCES.md  INSTALLATION.md  SCIENTIFIC_METHOD.md  structure.txt
docs/papers/: heliobio_whitepaper_v1.0.md
frontend/: Dockerfile  index.html  package.json
frontend/public/: index.html
frontend/src/: App.jsx  App.tsx
frontend/src/components/: CosmicDashboard.tsx  CustomTooltip.jsx  (+1 more)
ml/models/: predictive_model.py
scripts/: cosmic_init.sh  fix-backend.sh  fix-final.sh  fix-frontend.sh  fix-imports.sh  fix_build.sh  setup_complete.sh  verify_cosmic_connection.py  verify_fix.py  verify_ports.py
(+3 files in other folders)
